engines/spree_wedding_atelier/app/assets/stylesheets/wedding_atelier/registrations/_containers.scss
.onboarding-container {
  @extend .container-fluid;
  background-color: $white-two;
  height: 100vh;
  margin: 50px 0 20px;
  padding: 15px;

  h1 {
    @extend .text-center;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 10px;
    font-size: 28px;
    font-weight: 300;
    line-height: .98;
  }

  .left-side {
    @extend .col-xs-12;
    @extend .col-sm-12;
    @extend .col-md-6;
  }

  .right-side {
    @extend .col-sm-12;
    @extend .col-md-6;
  }

  .right-side,
  .steps {
    @extend .hidden-xs;
  }

  .right-side-container h1 {
    @extend .center-block;
  }

  @media screen and (min-width: $screen-sm-min) {

    margin: 0;
    padding: 0;

    .left-side,
    .right-side {
      height: 100%;
    }

    .left-side {
      background-color: $white-three;
      background-image: image-url('spree_wedding_atelier/marbel.png');
      padding: 40px;
    }

    .right-side {
      background-size: cover;
      background-repeat: no-repeat;
      background-image: image-url('spree_wedding_atelier/bitmap.png');
      display: table;
    }

    .left-side-container {
      background-color: $white-two;
      display: table;
      height: 100%;
      margin-left: auto;
      margin-right: auto;
      padding: 20px 60px;
    }

    .fp-logo-float {
      background: image-url('fp-logo-white.svg') no-repeat center;
      background-size: 70%;
    }

    .table-cell-middle {
      max-width: 300px;
    }
  }
}

